kube-services/rook/toolbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rook-ceph-tools
  namespace: rook-ceph
  labels:
    app: rook-ceph-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rook-ceph-tools
  template:
    metadata:
      labels:
        app: rook-ceph-tools
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: rook-ceph-tools
        image: rook/ceph:v0.9.1
        command: ["/tini"]
        args: ["-g", "--", "/usr/local/bin/toolbox.sh"]
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "/root/fs_gen.sh"]
        volumeMounts:
          - mountPath: /root/fs_gen.sh
            subPath: fs_generator.sh
            name: fsconfig
          - mountPath: /resources
            name: resources
          - mountPath: /dev
            name: dev
          - mountPath: /sys/bus
            name: sysbus
          - mountPath: /lib/modules
            name: libmodules
          - name: mon-endpoint-volume
            mountPath: /etc/rook
      # if hostNetwork: false, the "rbd map" command hangs, see https://github.com/rook/rook/issues/2021
      hostNetwork: true
      volumes:
        - name: fsconfig
          configMap:
            defaultMode: 0777
            name: fs-tree
        - name: dev
          hostPath:
            path: /dev
        - name: sysbus
          hostPath:
            path: /sys/bus
        - name: libmodules
          hostPath:
            path: /lib/modules
        - name: mon-endpoint-volume
          configMap:
            name: rook-ceph-mon-endpoints
            items:
            - key: data
              path: mon-endpoints
        - name: resources
          flexVolume:
            driver: ceph.rook.io/rook
            fsType: ceph
            options:
              fsName: myfs # name of the filesystem specified in the filesystem CRD.
              clusterNamespace: rook-ceph # namespace where the Rook cluster is deployed
              # by default the path is /, but you can override and mount a specific path of the filesystem by using the path attribute
              # the path must exist on the filesystem, otherwise mounting the filesystem at that path will fail
              # path: /some/path/inside/cephfs
