kube-services/rook/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: rook-ceph
  name: allow-all-namespaces
spec:
  podSelector:
    matchLabels:
      namespace: rook-ceph
  ingress:
  - from:
    - namespaceSelector: {}
